gitops/core/kube-prometheus-stack/securitypolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: prometheus-ui
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: prometheus
  oidc:
    provider:
      issuer: https://login.nce.wtf/dex/
    clientID: envoy-gateway
    clientSecret:
      name: dex-envoy-client
    redirectURL: "https://prometheus.nce.wtf/oauth2/callback"
    logoutPath: "/logout"
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: prometheus-remote-write
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: prometheus-remote-write
  basicAuth:
    users:
      name: prometheus-remote-write-basic-auth
